--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>{% block title %}My Site{% endblock %}</title>
+    <title>{% block title %}Filewallah{% endblock %}</title>
     <link rel='stylesheet' href='/media/css/main.css' />
     <link rel="apple-touch-icon" href="">
 
