--- a/templates/base.html
+++ b/templates/base.html
@@ -1,28 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>{% block title %}Filewallah{% endblock %}</title>
-    <link rel='stylesheet' href='/media/css/main.css' />
-    <link rel="apple-touch-icon" href="">
+<meta charset="UTF-8">
+<link rel="sytlesheet" href="/static/css/style.css" />
+<head>
+    {% block head %}
+	<title>{% block title%}{%endblock%} - My webpage   </title>
+    {% endblock %}
+</head>
+<body>
 
-    {% block javascripts %}{% endblock %}
-
-    <meta name="title" content="" />
-    <meta name="description" content="" />
-    <link rel="shortcut icon" href="/favicon.ico">
-
-    <meta name="google-site-verification" content="" />
-
-    <meta property="fb:admins" content="" />
-    <meta property="og:site_name" content="" />
-    <meta property="og:title" content="" />
-    <meta property="og:url" content="" />
-    <meta property="og:type" content="website" />
-    <meta property="og:description" content="" />
-    <meta property="og:image" content="" />
-    <meta property="fb:page_id" content="" />
-
-  </head>
-  <body>
-    {% block content %}{% endblock %}
-  </body>
+<div id="body"> {% block body %}
+<p> no body has been defined</p>
+{% endblock %}</div>
+ <div id="footer">
+        {% block footer %}
+        &copy; Copyright 2008 by <a href="http://domain.invalid/">you</a>.
+        {% endblock %}
+    </div>
+</body>
+</html>
