--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,14 @@
-{% extends 'base.html' %}
-
-{%block content%}
-    <form action="/sign" method="post">
-        {% csrf_token %} 
-        <table>
-            {{ form.as_table }}
-        </table>
-        <div><input type="submit" value="Sign Guestbook"></div>
-    </form>
-    {% if posts %}
-        {% for post in posts %}
-            {% if post.author %}
-                <em>{{ post.author }}</em> wrote:<br/>
-            {% else %}
-                <em>An anonymous person</em> wrote:<br/>
-            {% endif %}
-            {{ post.message }}<br/><br/>
-        {% endfor %}
-    {% endif %}
-{%endblock%}
+{% extends "base.html" %}
+{% block title %}Index{% endblock %}
+{% block head %}
+    {{ super() }}
+    <style type="text/css">
+        .important { color: #336699; }
+    </style>
+{% endblock %}
+{% block body  %}
+    <h1>Index</h1>
+    <p class="important">
+      {{ books.author }}
+    </p>
+{% endblock %}
