trying to get the templates to work

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,12 +10,15 @@
 <body>
 
 <div id="body"> {% block body %}
+	{{ welcome }}
 <p> no body has been defined</p>
 {% endblock %}</div>
- <div id="footer">
+
+<!--  <div id="footer">
         {% block footer %}
         &copy; Copyright 2008 by <a href="http://domain.invalid/">you</a>.
         {% endblock %}
-    </div>
+    </div> -->
+
 </body>
 </html>
