add working about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{%extends "base.html" %}
 {% block title %}Index{% endblock %}
 {% block head %}
     <style type="text/css">
@@ -7,6 +7,6 @@
 {% endblock %}
 {% block body  %}
     <h1>filewallah</h1>
-      {{ welcome }}
+      {{ about }}
     </p>
 {% endblock %}
