--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,20 @@
 {% endblock %}
 {% block body  %}
     <h1>filewallah</h1>
-      {{ welcome }}
-    </p>
+
+      {{ welcome }} </br>
+
+<div class="container">
+
+<form method="post">
+   <label>Title </title>
+   <input type="text" name="title" />
+   <label>Link </title>
+   <input type="text" name="link" />
+   <label>comment </title>
+   <input type="text" name="comment" />
+   <input type="submit" value="submit" />
+   </form>
+</div>
+
 {% endblock %}
