--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
   <head>
 <meta charset="UTF-8">
 
-<link rel="sytlesheet" href="/static/css/bootstrap.css" />
+<link rel="sytlesheet" href="/static/css/style.css" />
 </head>
 <body>
 <title>Filewallah App Engine</title>
