--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Filewallah App Engine</title>
-<link rel="sytlesheet" href="/static/css/bootstrap.css" />
+<link rel="sytlesheet" href="/static/css/style.css" />
 <div class="navbar navbar-inverse">
       <div class="navbar-inner">
       	<a class="brand" href="/">Filewallah</a>
