--- a/templates/about.html
+++ b/templates/about.html
@@ -1,22 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Filewallah App Engine</title>
-<link rel="sytlesheet" href="/static/css/style.css" />
-<div class="navbar navbar-inverse">
-      <div class="navbar-inner">
-      	<a class="brand" href="/">Filewallah</a>
-            <ul class="nav">
-               <li><a href="/">home</a></li>
-               <li><a href="about">about</a></li>     
-               <li><a href="new">new</a></li>
-            </ul>
-          </div>
-        </div>
-	<div class="hero-unit">
-	<h1> File app <p>Welcome to the file app engine app </p></h1>
-       </div>
-     </body>
-  </html>
+{% extends 'base.html'%}
 
+<div id="body"> {% block body %}
+<p> the filewallah about page </p>
+{% endblock %}
+</div>
+</body>
+</html>
