--- a/templates/index.html
+++ b/templates/index.html
@@ -1,34 +1,21 @@
-<!DOCTYPE html>
-<html>
-  <head>
-<meta charset="UTF-8">
+{% extends 'base.html'%}
+<!-- div class="post"-->
 
-<link rel="sytlesheet" href="/static/css/style.css" />
-</head>
-<body>
-<title>Filewallah App Engine</title>
-<div class="navbar navbar-inverse">
-      <div class="navbar-inner">
-      	<a class="brand" href="/">Filewallah</a>
-            <ul class="nav">
-               <li><a href="/">home</a></li>
-               <li><a href="about">about</a></li>
-               <li><a href="new">new</a></li>
-            </ul>
-          </div>
-        </div>
 
-<div class="post">
-<h3>your latest files</h2>
-	<hr />
-{% for file in files %}
-<ul>
-   <li><h3>{{file.title}}{{file.link}} on {{file.adddate.strftime("%B %d, %Y")}}</h3>
-       <p>{{file.comment}} </p>
-   </li>
-   <hr />
-   </ul>
-  {% endfor %}
+<div id="body"> {% block body %}
+  <h3>your latest files</h2>
+	  <hr />
+    {% for file in files %}
+      <ul>
+        <div id="post"> 
+        <li><h3>{{file.title}}{{file.link}} on {{file.adddate.strftime("%B %d, %Y")}}</h3>
+        <p>{{file.comment}} </p>
+        </li>
+        <hr />
+       </ul>
+     </div>
+    {% endfor %}
+{% endblock %}
 </div>
 </body>
 </html>
