--- a/templates/new.html
+++ b/templates/new.html
@@ -1,10 +1,4 @@
-{% extends "base.html" %}
-{% block title %}New File{% endblock %}
-{% block head %}
-    <style type="text/css">
-        .important { color: #336699; }
-    </style>
-{% endblock %}
+{% extends 'base.html'%}
 {% block body  %}
 <div class="container">
 	<form method="post">
